--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,19 +52,21 @@ jobs:
       matrix:
         os: [linux, windows, darwin, freebsd, netbsd, openbsd]
         arch: ['386', amd64, arm, arm64]
+        exclude:
+          - arch: '386'
+            os: darwin
+          - arch: arm
+            os: darwin
     steps:
       - name: Checkout repository
-        if: matrix.os != 'darwin' || (matrix.arch != '386' && matrix.arch != 'arm')
         uses: actions/checkout@v4
 
       - name: Set up Go
-        if: matrix.os != 'darwin' || (matrix.arch != '386' && matrix.arch != 'arm')
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Build
-        if: matrix.os != 'darwin' || (matrix.arch != '386' && matrix.arch != 'arm')
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: ${{ matrix.arch }}
@@ -77,7 +79,6 @@ jobs:
           go build -v -trimpath -ldflags="-s -w" -o "$output_name" github.com/wavy-cat/doki/cmd/main
 
       - name: Generate checksum
-        if: matrix.os != 'darwin' || (matrix.arch != '386' && matrix.arch != 'arm')
         run: |
           output_name="bin/doki-${{ matrix.os }}-${{ matrix.arch }}"
           if [ "${{ matrix.os }}" = "windows" ]; then
@@ -87,27 +88,7 @@ jobs:
           sha256sum "$output_name" > "$checksum_file"
 
       - name: Upload artifacts
-        if: matrix.os != 'darwin' || (matrix.arch != '386' && matrix.arch != 'arm')
         uses: actions/upload-artifact@v4
         with:
           name: binary-${{ matrix.os }}-${{ matrix.arch }}
           path: bin/
-
-  release:
-    name: "Create GitHub Release"
-    runs-on: ubuntu-24.04-arm
-    needs: build
-    permissions:
-      contents: write
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: release-artifacts
-
-      - name: Create release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.sha }}
-          name: Release ${{ github.sha }}
-          files: release-artifacts/**
