--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,13 +50,16 @@ jobs:
     needs: [ vet, test ]
     strategy:
       matrix:
-        os: [linux, windows, darwin, freebsd, netbsd, openbsd, android]
+        os: [linux, windows, darwin, freebsd, netbsd, openbsd]
         arch: ['386', amd64, arm, arm64]
         exclude:
           - arch: '386'
             os: darwin
           - arch: arm
             os: darwin
+        include:
+          - arch: arm64
+            os: android
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
